JenkinsTemplate.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Provisioning of an EC2 Instance within a Custom Network via Cloudformation, with Jenkins running on the instance

Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.7.0.0/16
      EnableDnsHostnames: True
      EnableDnsSupport: True
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: JenkinsVPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-2b
      CidrBlock: 10.7.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: JenkinsPublicSubnet01
      VpcId: !Ref VPC

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-2b
      CidrBlock: 10.7.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: JenkinsPrivateSubnet01
      VpcId: !Ref VPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: JenkinsPublicRouteTable
      VpcId: !Ref VPC

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: JenkinsPrivateRouteTable
      VpcId: !Ref VPC
    
  PublicRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow traffic into Jenkins Server
      GroupName: Jenkins SG
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: JenkinsSG
      VpcId: !Ref VPC

  InternetGateWay:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: JenkinsIGW

  InternetGateWayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateWay
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateWay
      RouteTableId: !Ref PublicRouteTable

  WebInstance:
    Type: AWS::EC2::Instance
    Properties:
      BlockDeviceMappings:
        - DeviceName: "/dev/xvda"
          Ebs:
            VolumeType: gp3
            Iops: "3000"
            DeleteOnTermination: true
            VolumeSize: "8"
      ImageId: ami-03e88be9ecff64781
      InstanceType: t2.micro
      KeyName: cba-web-Key
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: JenkinsServer    
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            yum update -y
            yum install java-1.8.0-openjdk-devel -y
            curl --silent --location http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo | tee /etc/yum.repos.d/jenkins.repo
            rpm --import https://pkg.jenkins.io/redhat/jenkins.io.key
            systemctl daemon-reload
            amazon-linux-extras install epel -y
            yum install jenkins -y
            systemctl start jenkins
            systemctl status jenkins
            systemctl enable jenkins
            cat /var/lib/jenkins/secrets/initialAdminPassword
  
  EIPAddress:
    Type: AWS::EC2::EIP
  
  EIPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref 'WebInstance'
      EIP: !Ref 'EIPAddress'
